--- a/app/src/main/res/layout/activity_suggestions.xml
+++ b/app/src/main/res/layout/activity_suggestions.xml
@@ -1,28 +1,81 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
     android:background="#1E2747">
 
-    <TextView
-        android:id="@+id/suggestions_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Suggestions de films et séries"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#FFDB58"
-        android:paddingBottom="16dp"
-        android:gravity="center"/>
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:layout_alignParentTop="true">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_suggestions"
-        android:layout_width="297dp"
+        <TextView
+            android:id="@+id/suggestions_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Suggestions de films et séries"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#FFDB58"
+            android:paddingBottom="16dp"
+            android:gravity="center" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_suggestions"
+            android:layout_width="265dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|right"
+            android:clipToPadding="false"
+            android:gravity="center_horizontal"
+            android:paddingBottom="16dp" />
+    </LinearLayout>
+
+    <!-- Barre de navigation en bas -->
+    <LinearLayout
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|right"
-        android:clipToPadding="false"
-        android:gravity="center_horizontal"
-        android:paddingBottom="16dp" />
+        android:layout_alignParentBottom="true"
+        android:background="#000000"
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <!-- Bouton Météo -->
+        <Button
+            android:id="@+id/btn_weather"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_weather"
+            android:padding="8dp"
+            android:text="Météo"
+            android:textColor="#ffff" />
+
+        <!-- Bouton Accueil -->
+        <Button
+            android:id="@+id/btn_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_home"
+            android:padding="8dp"
+            android:text="Accueil"
+            android:textColor="#fff" />
+
+        <!-- Bouton Films -->
+        <Button
+            android:id="@+id/btn_movies"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_movies"
+            android:padding="8dp"
+            android:text="Films"
+            android:textColor="#ffff" />
+
+    </LinearLayout>
+
+</RelativeLayout>
